--- a/views/manageuser.ejs
+++ b/views/manageuser.ejs
@@ -31,7 +31,7 @@
     <h2 class="text-center mb-4">User Management</h2>
 
     <!-- Add User Form -->
-    <form action="/admin/users/add" method="POST" class="row g-3 mb-5">
+    <form action="/addUser" method="POST" class="row g-3 mb-5">
       <div class="col-md-2">
         <input type="text" name="username" class="form-control" placeholder="Username" required />
       </div>
