--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -23,13 +23,16 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/inventory">Inventory</a>
+            <a class="nav-link" href="/inventory" style="color: #4a9eff;">Inventory</a>
           </li> 
           <li class="nav-item">
-            <a class="nav-link" href="/addProduct">Add New Product</a>
+            <a class="nav-link" href="/addProduct" style="color: #4a9eff;">Add New Product</a>
           </li> 
           <li class="nav-item">
-            <a class="nav-link" href="/logout">Logout</a>
+            <a class="nav-link" href="/manageuser" style="color: #4a9eff;">Manage Users</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout" style="color: #4a9eff;">Logout</a>
           </li> 
         </ul>
       </div>
@@ -54,6 +57,16 @@
       <div class="mb-3">
         <label for="price" class="form-label">Price ($)</label>
         <input type="number" class="form-control" id="price" name="price" min="0" step="0.01" required>
+      </div>
+
+      <div class="mb-3">
+        <label for="category" class="form-label">Category</label>
+        <select name="category" id="category" class="form-select" required>
+            <option value="">Select Category</option>
+            <option value="Produce">Produce</option>
+            <option value="Drinks">Drinks</option>
+            <option value="Others">Others</option>
+        </select>
       </div>
 
       <div class="mb-4">
