--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -16,16 +16,16 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class = "nav-item">
-                <a class="nav-link" href="/inventory">View Inventory</a>
+                <a class="nav-link" href="/inventory" style="color: #4a9eff;">View Inventory</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/addProduct">Add Product</a>
+              <a class="nav-link" href="/addProduct" style="color: #4a9eff;">Add Product</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/manageuser">Manage Users</a>
+              <a class="nav-link" href="/manageuser" style="color: #4a9eff;">Manage Users</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/logout">Logout</a>
+              <a class="nav-link" href="/logout" style="color: #4a9eff;">Logout</a>
             </li>
           </ul>
         </div>
