--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -22,13 +22,13 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/shopping">Shop</a>
+            <a class="nav-link" href="/shopping" style="color: #4a9eff;">Shop</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/cart">View Cart</a>
+            <a class="nav-link" href="/cart" style="color: #4a9eff;">View Cart</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/logout">Logout</a>
+            <a class="nav-link" href="/logout" style="color: #4a9eff;">Logout</a>
           </li> 
         </ul>
       </div>
