--- a/views/editProduct.ejs
+++ b/views/editProduct.ejs
@@ -6,6 +6,11 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
         <title>Supermarket App</title>
+        <style>
+            body {
+                background-color: lightblue;
+            }
+        </style>
     </head>
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -17,7 +22,7 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="/addProduct">Add new product</a>
+                <a class="nav-link" href="/addProduct" style="color: #4a9eff;">Add new product</a>
               </li> 
             </ul>
           </div>
@@ -25,6 +30,11 @@
     </nav>
 
     <div class="container">
+      <style>
+        body {
+          background-color: lightblue; 
+        }
+      </style>
         <br>
         <div class="text-center"><h2>Update Product</h2></div>
         <br>
@@ -45,6 +55,14 @@
                 <img src = "/images/<%= product.image %>" width="20%"><br><br>
                 
                 New Image:<br> <input type="file" id="image" name="image" accept="image/*" value=<%= product.image %> ><br><br>
+                <div class="mb-3">
+                <label for="category" class="form-label">Category</label>
+                <select name="category" id="category" class="form-select" required>
+                  <option value="Produce" <%= product.category === 'Produce' ? 'selected' : '' %>>Produce</option>
+                  <option value="Drinks" <%= product.category === 'Drinks' ? 'selected' : '' %>>Drinks</option>
+                  <option value="Others" <%= product.category === 'Others' ? 'selected' : '' %>>Others</option>
+                </select>
+          </div>
 
                 <button type="submit">Update Product</button>
             </form>
