--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -23,16 +23,16 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class = "nav-item">
-                <a class="nav-link" href="/inventory">View Inventory</a>
+                <a class="nav-link" href="/inventory" style="color: #4a9eff;">View Inventory</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/addProduct">Add Product</a>
+              <a class="nav-link" href="/addProduct" style="color: #4a9eff;">Add Product</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/manageuser">Manage Users</a>
+              <a class="nav-link" href="/manageuser" style="color: #4a9eff;">Manage Users</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/logout">Logout</a>
+              <a class="nav-link" href="/logout" style="color: #4a9eff; ">Logout</a>
             </li>
           </ul>
         </div>
@@ -66,6 +66,33 @@
         Found <%= products.length %> result(s) for "<%= searchQuery %>"
         </p>
       <% } %>
+
+      <!---filter function-->
+       <form action="/products" method="GET" class="filter-form">
+        <select name="category" class="form-select" onchange="this.form.submit()">
+          <option value="All" <%= (typeof selectedCategory !== 'undefined' && selectedCategory === 'All') ? 'selected' : '' %>>All Categories</option>
+          <option value="Produce" <%= (typeof selectedCategory !== 'undefined' && selectedCategory === 'Produce') ? 'selected' : '' %>>Produce</option>
+          <option value="Drinks" <%= (typeof selectedCategory !== 'undefined' && selectedCategory === 'Drinks') ? 'selected' : '' %>>Drinks</option>
+          <option value="Others" <%= (typeof selectedCategory !== 'undefined' && selectedCategory === 'Others') ? 'selected' : '' %>>Others</option>
+        </select>
+        <% if (typeof selectedCategory !== 'undefined' && selectedCategory !== 'All') { %>
+          <a href="/inventory">Clear Filter</a>
+        <% } %>
+      </form>
+
+      <!-- Search Results Message -->
+    <% if (typeof searchQuery !== 'undefined' && searchQuery) { %>
+      <p class="search-results">
+        Found <%= products.length %> result(s) for "<%= searchQuery %>"
+      </p>
+    <% } %>
+
+      <!-- Filter Results Message -->
+    <% if (typeof selectedCategory !== 'undefined' && selectedCategory !== 'All') { %>
+      <p class="filter-results">
+        Showing products in category: "<%= selectedCategory %>"
+      </p>
+    <% } %>
 
     <br>
     <table class="table table-hover small text-center">
