--- a/views/product.ejs
+++ b/views/product.ejs
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        body {
+            background-color: lightblue;
+        }
+    </style>
     <title>Supermarket App</title>
 </head>
 <body>
@@ -20,14 +25,14 @@
             <ul class="navbar-nav">
               <% if (user.role === "admin") { %>
                 <li class="nav-item">
-                  <a class="nav-link" href="/inventory">Inventory</a>
+                  <a class="nav-link" href="/inventory" style="color: #4a9eff;">Inventory</a>
                 </li> 
                 <li class="nav-item">
-                  <a class="nav-link" href="/addProduct">Add new product</a>
+                  <a class="nav-link" href="/addProduct" style="color: #4a9eff;">Add new product</a>
                 </li> 
               <% } %>
               <li class="nav-item">
-                <a class="nav-link" href="/logout">Logout</a>
+                <a class="nav-link" href="/logout" style="color: #4a9eff;">Logout</a>
               </li> 
             </ul>
           </div>
