--- a/views/register.ejs
+++ b/views/register.ejs
@@ -20,10 +20,10 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="/register">Register</a>
+                <a class="nav-link" href="/register" style="color: #4a9eff;">Register</a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link" href="/Login">Login</a>
+                <a class="nav-link" href="/Login" style="color: #4a9eff;">Login</a>
               </li> 
             </ul>
           </div>
