added checkout and order system integration

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -25,6 +25,9 @@
               <a class="nav-link" href="/manageuser" style="color: #4a9eff;">Manage Users</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/admin/orders" style="color: #4a9eff;">Manage Orders</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/logout" style="color: #4a9eff;">Logout</a>
             </li>
           </ul>
@@ -40,5 +43,6 @@
     <button class="btn btn-primary" onclick="location.href='/inventory'">View Inventory</button>
     <button class="btn btn-secondary" onclick="location.href='/manageuser'">Manage Users</button>
     <button class="btn btn-success" onclick="location.href='/addProduct'">Add Product</button>
+    <button class="btn btn-info" onclick="location.href='/admin/orders'">Manage Orders</button>
 </body>
 </html>
