checkout confirmation test message

--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -32,6 +32,9 @@
               <a class="nav-link" href="/manageuser" style="color: #4a9eff;">Manage Users</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/manageOrders" style="color: #4a9eff;">Manage Orders</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/logout" style="color: #4a9eff; ">Logout</a>
             </li>
           </ul>
