--- a/views/manageuser.ejs
+++ b/views/manageuser.ejs
@@ -14,11 +14,17 @@
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
+          <li class="navbar-nav">
+            <a class="nav-link" href="/inventory">View Inventory</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="/addProduct">Add Product</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/manageuser">Manage Users</a>
+          </li>
+          <li>
+            <a class="nav-link" href="/manageOrders">Manage Orders</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/logout">Logout</a>
